[package]
name = "ctrl-alt-f4"
edition = "2024"
authors = [
    "Lily Fox <angelrecovery@icloud.com>"
]
license = "BSD-2-Clause"

[dependencies]
ctrlc = "3.4"
env_logger = "0.11.8"
log = "0.4.27"
windows = { version = "0.61.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
] }

[profile.release]
lto = "thin"
codegen-units = 1
